--- a/day 2/index.html
+++ b/day 2/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather app</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="includes/images/search.png" alt="searchicon"></button>
+            <button><img src="includes/images/search.png"></button>
         </div>
         <div class="weather">
             <img src="includes/images/sunny.png" class="weather-icon">
@@ -34,7 +36,39 @@
             </div>
         </div>
     </div>
+    <script>
+        const weatherIcon = document.querySelector(".weather-icon");
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+        async function checkWeather(city) {
+            const response = await fetch(apiUrl + city + '&appid=91e80453ca393b6cff08ccf0ed6b45a2');
+            var data = await response.json();
 
-    
+            document.querySelector(".city").innerHTML = data.name;
+            document.querySelector(".temp").innerHTML = data.main.temp + "°c";
+            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+            document.querySelector(".wind").innerHTML = data.wind.speed + "km/hr";
+
+            if (data.weather[0].main == "Clouds") {
+                weatherIcon.src = "includes/images/clouds.png"
+            } else if (data.weather[0].main == "Clear") {
+                weatherIcon.src = "includes/images/clear.png"
+            } else if (data.weather[0].main == "Rain") {
+                weatherIcon.src = "includes/images/rainny.png"
+            } else if (data.weather[0].main == "Drizzle") {
+                weatherIcon.src = "includes/images/drizzle.png"
+            } else if (data.weather[0].main == "Mist") {
+                weatherIcon.src = "includes/images/mist.png"
+            }
+
+            document.querySelector(".weather").style.display = "block";
+        }
+        searchBtn.addEventListener("click", () => {
+            checkWeather(searchBox.value);
+        });
+    </script>
+
 </body>
+
 </html>
